# docxprod

./: .gitignore  MANIFEST.in  README.md  setup.py
docxprod/: docxprod_helper.py  pdfilter_docx_centertext.py  pdfilter_docx_colortext.py  pdfilter_docx_helper.py  pdfilter_docx_mermaid.py  pdfilter_docx_pagebreak.py  pdfilter_docx_svg2emf.py  pdfilter_docx_tab_update_wdith.py  pdfilter_docx_update_tabwdith.py  pdpost_docx_update_fields.py  pdpost_pdf_find_then_colored.py  pdpost_pdf_forcd_to_relative_path.py  pdpost_pdf_update_bookmark.py  pdpost_pdf_update_numpages.py  pdpost_pdf_update_toc_page.py  pdpost_pdf_update_tocpage.py
docxprod/config/: docxprod-pdfilters-docx.yaml
docxprod/data/: markdown-footnotes.css  markdown-headtitle-resized.css  markdown-inline-code-fixed.css  markdown-katex-math.css  markdown-mermaid.css  markdown-table-fulloutline.css  markdown-table-fullwidth.css  pd-minimal.css  pdf_bookmark_default.css  pdf_markdown_default.css  tufte.html5
docxprod/pdfilter-rs/: Cargo.toml  build.rs
docxprod/pdfilter-rs/src/: docxprod_helper.rs  pdfilter_docx_centertext.rs  pdfilter_docx_colortext.rs  pdfilter_docx_pagebreak.rs  pdpost_pdf_find_then_colored.rs  utils.rs
tools/: z-update-eisvogel-tex.cmd  z-update-katex-css.cmd  z-update-markdown-latex-css.cmd  z-update-mermaid-js.cmd  z-update-prism-css.cmd  z-update-vscode-markdown-css.cmd
