[package]
name = "pdfilter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "docxprod-rs-helper"
path = "src/docxprod_helper.rs"

[[bin]]
name = "pdfilter-rs-docx-centertext"
path = "src/pdfilter_docx_centertext.rs"

[[bin]]
name = "pdfilter-rs-docx-colortext"
path = "src/pdfilter_docx_colortext.rs"

[[bin]]
name = "pdfilter-rs-docx-pagebreak"
path = "src/pdfilter_docx_pagebreak.rs"

[[bin]]
name = "pdpost-rs-pdf-find-then-colored"
path = "src/pdpost_pdf_find_then_colored.rs"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[dependencies]
clap = "4.2"
log = "0.4.17"
env_logger = "0.10"
lazy_static = "1.4"
pathdiv = "0.1"
glob = "0.3"
regex = "1.7"
pandoc_ast = "0.8"
dict = "0.1"
scraper = "0.16"
color-name = "1.0"
colors-transform = "0.2"
lopdf= { version = "0.30", features = ["pom_parser", "nom_parser"] }
